--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "bitcore-node-dash",
-  "description": "Full node with extended capabilities using Bitcore and Dash Core",
+  "name": "ioncore-node",
+  "description": "Full node with extended capabilities using ioncore and Dash Core",
   "author": "BitPay <dev@bitpay.com>",
   "version": "3.0.4",
   "main": "./index.js",
-  "repository": "git://github.com/dashpay/bitcore-node-dash.git",
-  "homepage": "https://github.com/dashpay/bitcore-node-dash",
+  "repository": "git://github.com/dashpay/ioncore-node.git",
+  "homepage": "https://github.com/dashpay/ioncore-node",
   "bugs": {
-    "url": "https://github.com/dashpay/bitcore-node-dash/issues"
+    "url": "https://github.com/dashpay/ioncore-node/issues"
   },
   "contributors": [
     {
@@ -24,10 +24,14 @@
     {
       "name": "Patrick Nagurny",
       "email": "patrick@bitpay.com"
+    },
+    {
+      "name": "Robert de Wilde",
+      "email": "email@robertdewilde.nl"
     }
   ],
   "bin": {
-    "bitcore-node-dash": "./bin/bitcore-node-dash"
+    "ioncore-node": "./bin/ioncore-node"
   },
   "scripts": {
     "preinstall": "./scripts/download",
@@ -39,13 +43,13 @@
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --recursive -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "tags": [
-    "dash",
-    "dashd"
+    "ion",
+    "iond"
   ],
   "dependencies": {
     "async": "^1.3.0",
     "bitcoind-rpc-dash": "^0.7.1",
-    "bitcore-lib-dash": "^0.13.20",
+    "ioncore-lib": "^0.13.20",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
     "commander": "^2.8.1",
@@ -67,7 +71,7 @@
   },
   "devDependencies": {
     "benchmark": "1.0.0",
-    "bitcore-p2p-dash": "^1.1.2",
+    "ioncore-p2p-dash": "^1.1.2",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.3",
