ioncore-lib version upgrade

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ioncore-node",
   "description": "Full node with extended capabilities using ioncore and Dash Core",
   "author": "BitPay <dev@bitpay.com>",
-  "version": "3.0.4",
+  "version": "4.0.0",
   "main": "./index.js",
   "repository": "git://github.com/dashpay/ioncore-node.git",
   "homepage": "https://github.com/dashpay/ioncore-node",
@@ -48,8 +48,8 @@
   ],
   "dependencies": {
     "async": "^1.3.0",
-    "bitcoind-rpc-dash": "^0.7.1",
-    "ioncore-lib": "^0.13.20",
+    "iond-rpc": "^0.7.1",
+    "ioncore-lib": "^0.14.0",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
     "commander": "^2.8.1",
